--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:itemBackground">@color/background_grey</item>
+        <item name="android:itemTextAppearance">@style/customMenuTextAppearance</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
 </resources>
