Add login layout

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,4 +18,19 @@
             android:orderInCategory="100"
             android:title="@string/action_clubs"
             app:showAsAction="never"/>
+        <item
+            android:id="@+id/action_shop"
+            android:orderInCategory="100"
+            android:title="@string/action_shop"
+            app:showAsAction="never"/>
+        <item
+            android:id="@+id/action_login"
+            android:orderInCategory="100"
+            android:title="@string/action_login"
+            app:showAsAction="never"/>
+        <item
+            android:id="@+id/action_booking"
+            android:orderInCategory="100"
+            android:title="@string/action_booking"
+            app:showAsAction="never"/>
 </menu>
