--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:scaleType="centerCrop"
         android:contentDescription="@string/sign_in"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/auth_screens_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.039" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/userLoginEmail"
+        android:id="@+id/textInputLoginEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/signInTitle">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/editTextLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_email"
@@ -52,7 +52,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/userPassword"
+        android:id="@+id/textInputLoginPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -60,10 +60,10 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userLoginEmail">
+        app:layout_constraintTop_toBottomOf="@id/textInputLoginEmail">
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/editTextLoginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_password"
@@ -87,7 +87,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userPassword" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLoginPassword" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -113,7 +113,7 @@
             android:layout_marginTop="16dp"
             android:textStyle="bold"
             android:padding="5dp"
-            android:text="@string/sign_up_offer_link" />
+            android:text="@string/register" />
 
     </LinearLayout>
 
