--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,29 +6,31 @@
     android:layout_height="match_parent"
     android:background="@color/background_grey">
 
-    <TextView
+    <com.rudimentum.fitnessstudio.ui.BoldTextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:fontFamily="@font/roboto_bold"
         android:text="@string/about_title"
         android:textAllCaps="true"
+        android:textColor="@color/black"
         android:textSize="46sp"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.rudimentum.fitnessstudio.ui.LightTextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/roboto"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="571dp"
         android:text="@string/about_description"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
