--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="splash_title_text_size">35sp</dimen>
+    <dimen name="button_background_radius">20dp</dimen>
+    <dimen name="auth_header_image_height">220dp</dimen>
+    <dimen name="title_text_size">36sp</dimen>
+    <dimen name="btn_text_size">18sp</dimen>
+    <dimen name="btn_padding">8dp</dimen>
 </resources>
