--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="splash_title_text_size">35sp</dimen>
-    <dimen name="button_background_radius">20dp</dimen>
+    <dimen name="button_background_radius">10dp</dimen>
+    
     <dimen name="auth_header_image_height">220dp</dimen>
     <dimen name="title_text_size">36sp</dimen>
     <dimen name="btn_text_size">18sp</dimen>
     <dimen name="btn_padding">8dp</dimen>
+    <dimen name="clickable_text_padding">5dp</dimen>
+    <dimen name="clickable_text_size">14sp</dimen>
+
+    <dimen name="toolbar_title_padding_start">-25dp</dimen>
+    <dimen name="toolbar_title_text_size">18sp</dimen>
+    <dimen name="terms_and_condition_text_size">14sp</dimen>
+    <dimen name="terms_and_condition_margin_start">10dp</dimen>
 </resources>
