--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -159,7 +159,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword">
 
                 <androidx.appcompat.widget.AppCompatCheckBox
-                    android:id="@+id/checkboxTermsCondition"
+                    android:id="@+id/cbTermsCondition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"/>
@@ -203,7 +203,7 @@
                 app:layout_constraintTop_toBottomOf="@id/btnRegister">
 
                 <com.rudimentum.fitnessstudio.ui.LightTextView
-                    android:id="@+id/tv_already_have_an_account"
+                    android:id="@+id/signInOfferText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/clickable_text_padding"
@@ -212,7 +212,7 @@
                     android:textSize="@dimen/clickable_text_size"/>
 
                 <com.rudimentum.fitnessstudio.ui.BoldTextView
-                    android:id="@+id/tv_login"
+                    android:id="@+id/signInOfferLink"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:foreground="?attr/selectableItemBackground"
