Fix crush of ActinBar
Fix IllegalStateException "This Activity already has an action bar supplied by the window decor. Do not request Window.FEATURE_SUPPORT_ACTION_BAR and set windowActionBar to false in your theme to use a Toolbar instead."

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,8 @@
         <item name="android:itemBackground">@color/background_grey</item>
         <item name="android:itemTextAppearance">@style/customMenuTextAppearance</item>
     </style>
+    <style name="Theme.FitnessStudio.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
