--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,44 @@
     android:background="@color/background_grey"
     tools:context=".MainActivity">
 
-    <com.rudimentum.fitnessstudio.ui.LightTextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/mainUserInfo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.rudimentum.fitnessstudio.ui.BoldTextView
+            android:id="@+id/btvUserId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.rudimentum.fitnessstudio.ui.BoldTextView
+            android:id="@+id/btvEmailId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <com.rudimentum.fitnessstudio.ui.OswaldButton
+        android:id="@+id/btnSignOut"
+        android:background="@drawable/button_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
+        android:foreground="?attr/selectableItemBackground"
+        android:padding="@dimen/btn_padding"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/btn_text_size"
+        android:text="@string/sign_out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainUserInfo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
