--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background_grey">
+    android:layout_height="match_parent">
 
     <com.rudimentum.fitnessstudio.ui.BoldTextView
         android:id="@+id/textView3"
@@ -13,7 +12,6 @@
         android:gravity="center"
         android:text="@string/about_title"
         android:textAllCaps="true"
-        android:textColor="@color/black"
         android:textSize="46sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,7 +27,6 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="571dp"
         android:text="@string/about_description"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
