--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -27,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.rudimentum.fitnessstudio.ui.BoldTextView
+    <com.rudimentum.fitnessstudio.utils.BoldTextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerImage"/>
 
-    <com.rudimentum.fitnessstudio.ui.LightTextView
+    <com.rudimentum.fitnessstudio.utils.LightTextView
         android:id="@+id/titleDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleDescription">
 
-        <com.rudimentum.fitnessstudio.ui.OswaldEditText
+        <com.rudimentum.fitnessstudio.utils.OswaldEditText
             android:id="@+id/etForgotPasswordEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.rudimentum.fitnessstudio.ui.OswaldButton
+    <com.rudimentum.fitnessstudio.utils.OswaldButton
         android:id="@+id/btnResetPassword"
         android:background="@drawable/button_background"
         android:layout_width="match_parent"
